code-gen/templates/cde/base/ping-cloud/pingaccess-was/engine/remove-argocd-ingress.yaml
# Remove Argocd-ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: argocd-ingress
$patch: delete
