code-gen/templates/cde/base/ping-cloud/pingaccess-was/engine/remove-pingcentral-admin-ingress.yaml
# Remove PingCentral Admin ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: pingcentral-admin-ingress
$patch: delete
