code-gen/templates/cde/base/ping-cloud/pingaccess-was/engine/remove-unneeded-ingresses.yaml
# Remove Argocd-ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: argocd-ingress
$patch: delete
---
# Remove PingCentral Admin ingress
apiVersion: apps/v1
kind: Ingress
metadata:
 name: pingcentral-admin-ingress
$patch: delete
